// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The withScrolledInView decorator should trigger the \`scrolledInView\` hook when in view 1`] = `
Array [
  Object {
    "current": Object {
      "x": 600,
      "y": 600,
    },
    "dampedProgress": Object {
      "x": 0.37880782918149464,
      "y": 0.31504608294930875,
    },
    "end": Object {
      "x": 600,
      "y": 600,
    },
    "progress": Object {
      "x": 1,
      "y": 1,
    },
    "start": Object {
      "x": -524,
      "y": -268,
    },
  },
]
`;

exports[`The withScrolledInView decorator should trigger the \`scrolledInView\` hook when in view with the \`useOffsetSizes\` option 1`] = `
Array [
  Object {
    "current": Object {
      "x": 600,
      "y": 600,
    },
    "dampedProgress": Object {
      "x": 0.4968343416370107,
      "y": 0.4451873271889401,
    },
    "end": Object {
      "x": 600,
      "y": 600,
    },
    "progress": Object {
      "x": 1,
      "y": 1,
    },
    "start": Object {
      "x": -524,
      "y": -268,
    },
  },
]
`;
